[C15] Added Loggers (Logging not yet implemented)